updating cors